# obsura

./: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  obscura-source.json  package-lock.json  package.json
.github/workflows/: node.yml
crates/node-obscura/: Cargo.toml
crates/node-obscura/src/: lib.rs
examples/: basic.mjs  cac.mjs  puppeteer-transport.mjs
lib/: create-exports.js
patches/: obscura-native-support.patch  series
scripts/: generate-patch.mjs  patch-status.mjs  postinstall.mjs  run-tests.mjs
test/: native-smoke.test.js  wrapper.test.js
test/fixtures/: static.html
