[workspace]
resolver = "2"
members = [
    "crates/node-obscura",
]
exclude = [
    "vendor/obscura",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/h4ckf0r0day/obscura"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
url = "2"

[profile.release]
strip = "symbols"
