[package]
name = "node-obscura"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = []
stealth = ["obscura-browser/stealth", "obscura-net/stealth"]

[dependencies]
obscura-browser = { path = "../../vendor/obscura/crates/obscura-browser" }
obscura-cdp = { path = "../../vendor/obscura/crates/obscura-cdp" }
obscura-dom = { path = "../../vendor/obscura/crates/obscura-dom" }
obscura-net = { path = "../../vendor/obscura/crates/obscura-net" }
napi = { version = "2", default-features = false, features = ["napi8", "serde-json", "tokio_rt"] }
napi-derive = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[build-dependencies]
napi-build = "2"
